--- a/frontend/src/pages/style.css
+++ b/frontend/src/pages/style.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     gap: 20px;
     height: 100vh;
-    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+    font-family: Montserrat;
     background-color: #f8f9fd;
   }
   
